tests/ui/transmute_ref.nightly.stderr
error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:22:22
   |
22 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:22:22
   |
22 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:22:22
   |
22 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:22:22
   |
22 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:29:40
   |
29 |     const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:29:40
   |
29 |     const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:29:40
   |
29 |     const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:29:40
   |
29 |     const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                        ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dst_not_frombytes::Dst: FromBytes` is not satisfied
  --> $DIR/transmute_ref.rs:39:38
   |
39 |     const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      unsatisfied trait bound
   |                                      required by a bound introduced by this call
   |
help: the trait `FromBytes` is not implemented for `dst_not_frombytes::Dst`
  --> $DIR/transmute_ref.rs:35:5
   |
35 |     struct Dst(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `dst_not_frombytes::Dst`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 80 others
note: required by a bound in `DST_NOT_FROM_BYTES::AssertDstIsFromBytes`
  --> $DIR/transmute_ref.rs:39:38
   |
39 |     const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dst_not_nocell::Dst: Immutable` is not satisfied
  --> $DIR/transmute_ref.rs:49:37
   |
49 |     const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                     |
   |                                     unsatisfied trait bound
   |                                     required by a bound introduced by this call
   |
help: the trait `Immutable` is not implemented for `dst_not_nocell::Dst`
  --> $DIR/transmute_ref.rs:45:5
   |
45 |     struct Dst(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `dst_not_nocell::Dst`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 130 others
note: required by a bound in `DST_NOT_IMMUTABLE::AssertDstIsImmutable`
  --> $DIR/transmute_ref.rs:49:37
   |
49 |     const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:65:58
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ---------------^^^^^^-
   |                                           |              |
   |                                           |              expected `&_`, found `usize`
   |                                           expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(&0usize);
   |                                                          +

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:65:43
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:65:43
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:65:43
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:65:43
   |
65 |     const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute_ref.rs:72:53
   |
72 |     const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                      ---------------^^^^^^-
   |                                      |              |
   |                                      |              expected `&_`, found `usize`
   |                                      expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
72 |     const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(&0usize);
   |                                                     +

error[E0277]: the trait bound `src_not_intobytes::Src: IntoBytes` is not satisfied
  --> $DIR/transmute_ref.rs:82:37
   |
82 |     const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                     |
   |                                     unsatisfied trait bound
   |                                     required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `src_not_intobytes::Src`
  --> $DIR/transmute_ref.rs:78:5
   |
78 |     struct Src(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `src_not_intobytes::Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and 69 others
note: required by a bound in `SRC_NOT_AS_BYTES::AssertSrcIsIntoBytes`
  --> $DIR/transmute_ref.rs:82:37
   |
82 |     const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `src_not_intobytes::Src: IntoBytes` is not satisfied
  --> $DIR/transmute_ref.rs:82:37
   |
82 |     const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `src_not_intobytes::Src`
  --> $DIR/transmute_ref.rs:78:5
   |
78 |     struct Src(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `src_not_intobytes::Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and 69 others
note: required by a bound in `SRC_NOT_AS_BYTES::AssertSrcIsIntoBytes`
  --> $DIR/transmute_ref.rs:82:37
   |
82 |     const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `src_not_nocell::Src: Immutable` is not satisfied
  --> $DIR/transmute_ref.rs:92:38
   |
92 |     const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      unsatisfied trait bound
   |                                      required by a bound introduced by this call
   |
help: the trait `Immutable` is not implemented for `src_not_nocell::Src`
  --> $DIR/transmute_ref.rs:88:5
   |
88 |     struct Src(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `src_not_nocell::Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 130 others
note: required by a bound in `SRC_NOT_IMMUTABLE::AssertSrcIsImmutable`
  --> $DIR/transmute_ref.rs:92:38
   |
92 |     const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `src_not_nocell::Src: Immutable` is not satisfied
  --> $DIR/transmute_ref.rs:92:38
   |
92 |     const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Immutable` is not implemented for `src_not_nocell::Src`
  --> $DIR/transmute_ref.rs:88:5
   |
88 |     struct Src(AU16);
   |     ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `src_not_nocell::Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 130 others
note: required by a bound in `SRC_NOT_IMMUTABLE::AssertSrcIsImmutable`
  --> $DIR/transmute_ref.rs:92:38
   |
92 |     const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `transmute_ref` exists for struct `zerocopy::util::macro_util::Wrap<&[u8], &[u8; 1]>`, but its trait bounds were not satisfied
   --> $DIR/transmute_ref.rs:99:35
    |
 99 |     const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/util/macro_util.rs:679:1
    |
679 | pub struct Wrap<Src, Dst>(pub Src, pub PhantomData<Dst>);
    | ------------------------- doesn't satisfy `_: TransmuteRefDst<'_>`
    |
    = note: the following trait bounds were not satisfied:
            `[u8]: Sized`
            `<[u8; 1] as KnownLayout>::PointerMetadata = usize`
            which is required by `zerocopy::util::macro_util::Wrap<&[u8], &[u8; 1]>: zerocopy::util::macro_util::TransmuteRefDst<'_>`
    = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `x` does not live long enough
  --> $DIR/transmute_ref.rs:58:52
   |
55 |     let x = 0u64;
   |         - binding `x` declared here
...
58 |     let _: &'static u64 = zerocopy::transmute_ref!(&x);
   |            ------------                            ^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `x` is borrowed for `'static`
59 | }
   | - `x` dropped here while still borrowed

error: aborting due to 22 previous errors

Some errors have detailed explanations: E0277, E0308, E0597, E0599.
For more information about an error, try `rustc --explain E0277`.
